# CAGEE

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.in  README.md  build_dist.sh  config.h.in  configure.ac  diffmat_precalc.cpp  git_version.cpp.in  git_version.h  git_watcher.cmake  log.config  main.cpp  test.cpp
Docker/: Dockerfile
cmake/: MKLConfig.cmake
docs/architecture/: 0007-setting_simulation_bounds.md  0008-initial_guess_for_sigma.md  0009-calculate-root-distribution-from-user-input.md  0010-estimation-from-different-sample-types.md  0011-reconstruction.md  0012-handling-variance-in-brownian-motion.md  0013-setting_estimation_bounds.md  0014-diffusion_matrix_precalculation.md  0015-credible_interval_calculation.md  0016-handling-missing-input-data.md  0016-replicate_model.md  0017-unbounded_brownian_motion.md  0018-global_free_rates.md
docs/manual/: cagee_manual.md  cagee_reference.md  troubleshooting_and_technical.md
examples/: cagee_estimate.cfg  cagee_estimate_gamma.cfg  cagee_estimate_global_freerates.cfg  cagee_estimate_multiple_lineage.cfg  cagee_estimate_multiple_tissues.cfg  cagee_estimate_paired_freerates.cfg  cagee_estimate_ratios.cfg  cagee_estimate_replicates.cfg  cagee_simulate.cfg  example_sigma_tree.txt  example_tree.txt  freerate_tree.nwk  gene_transcripts.txt  gene_transcripts_complex.txt  gene_transcripts_gamma.txt  gene_transcripts_gfr.txt  gene_transcripts_ratios.txt  gene_transcripts_replicates.txt  gene_transcripts_tissue.txt  log.config  mammal_gene_transcripts.txt  mammal_transcripts_tissue.txt  replicate_map.txt
src/: CMakeLists.txt  DiffMat.cpp  DiffMat.h  arguments.cpp  arguments.h  base_model.cpp  base_model.h  blas_multiplier.cpp  blas_multiplier.h  bounded_brownian_motion_model.cpp  bounded_brownian_motion_model.h  cagee.cpp  clade.cpp  clade.h  core.cpp  core.h  discretized_gamma.cpp  discretized_gamma.h  easylogging++.h  error_model.cpp  error_model.h  execute.cpp  execute.h  fitch_margoliash.cpp  fitch_margoliash.h  freerate_global_model.cpp  freerate_global_model.h  freerate_model.cpp  freerate_model.h  freerate_paired_model.cpp  freerate_paired_model.h  gamma_core.cpp  gamma_core.h  gene_family_reconstructor.cpp  gene_family_reconstructor.h  gene_transcript.cpp  gene_transcript.h  gpu_multiplier.cpp  gpu_multiplier.h  inference_pruner.cpp  (+41 more)
src_docs/: doxygen.cfg
utils/: basic_tests  quick_build  rebuild_cagee
